--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,10 @@ dist-ssr
 *.sln
 *.sw?
 .vercel
+
+# Playwright
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
+/playwright/.auth/
