--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "@eslint/js": "^9.32.0",
     "@playwright/test": "^1.55.1",
     "@tailwindcss/typography": "^0.5.16",
+    "@types/deno": "^2.5.0",
     "@types/node": "^22.16.5",
     "@types/react": "^18.3.23",
     "@types/react-dom": "^18.3.7",
