bugfix: favicon altered

--- a/vercel.json
+++ b/vercel.json
@@ -32,6 +32,15 @@
           "value": "text/css; charset=utf-8"
         }
       ]
+    },
+    {
+      "source": "/(favicon\\.svg|manifest\\.json)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=86400, must-revalidate"
+        }
+      ]
     }
   ]
 }
